--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
         </div>
         <div id="divEvaluacion" class="container">
             <div class="col-lg-12">
-                <video id="vidEvaluacion" class="col-lg-offset-2 col-lg-8 col-lg-offset-2" muted>
+                <video id="vidEvaluacion" class="col-lg-offset-2 col-lg-8 col-lg-offset-2">
                     <source src="Recursos/Video 1.2.mp4" />
                 </video>
             </div>
@@ -108,8 +108,21 @@
             
             $("#vidEvaluacion").on('ended', function () {
                 for(i = 0; i< objArrayRiesgosUser.length; i++){
-                    console.log("click: " + i + " ->" + objArrayRiesgosUser[i].inicio);
-                    
+                    for(j = 0; j < objArrayRiesgos.length; j++){
+                        var inicio = objArrayRiesgos[j].inicio;
+                        var fin = objArrayRiesgos[j].fin;
+                        var promAcierto = (inicio + fin)/2;
+                        if(objArrayRiesgosUser[i].inicio >= inicio & objArrayRiesgosUser[i].inicio <= fin){
+                            objArrayRiesgosUser[i].acierto = 1;
+                            objArrayRiesgosUser[i].reaccion = promAcierto - objArrayRiesgosUser[i].inicio                         ;
+                        }
+
+                    }
+                }
+                for(i = 0; i< objArrayRiesgosUser.length; i++){
+                    console.log("Click: " + objArrayRiesgosUser[i].inicio + " --|-- "
+                                + "Acierto: " + objArrayRiesgosUser[i].acierto + " --|-- "
+                                + "Reaccion: " + objArrayRiesgosUser[i].reaccion + " --|-- ");
                 }
                 /*var maxValor = 6;
                 var valor = parseInt($("#valor").val());
