--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
             </div>
         </nav>
 
-        <div class="container-fluid p-0" style="background-color: #D3D3D3">
+        <div class="container-fluid p-0" style="background-color: #EDEDF1">
 
             <section class="resume-section p-3 p-lg-5 " id="about">
                 <div class="my-auto">
